<resources>
    <string name="app_name">TicTacToeDemo</string>
    <string name="times_to_win_string">Times to Win: </string>
    <string name="start_string">START GAME!</string>
    <string name="leave_string">LEAVE GAME</string>
    <string name="score_string">SCORE</string>
    <string name="player1_string">PLAYER 1</string>
    <string name="player2_string">PLAYER 2</string>
    <string name="empty"> </string>
    <string name="makeMove"> a </string>
</resources>
