<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_game"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/background"
    tools:context="com.example.antlerros95.tictactoedemo.StartGame">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/title"
        android:text="@string/app_name"
        android:textColor="#FFB90F"
        android:gravity="center_horizontal"
        android:textSize="32sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="24sp"
                android:text="@string/times_to_win_string"/>
            
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/timesEditText"
                android:text="3"
                android:textSize="24sp"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_bg"
            android:text="@string/start_string"
            android:textColor="@color/white"
            android:id="@+id/startButton" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_bg"
            android:text="@string/leave_string"
            android:textColor="@color/white"
            android:id="@+id/leaveButton" />

    </LinearLayout>
</LinearLayout>
